Add periodic sending of product cards

--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,8 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=5432
+
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
+RABBITMQ_DEFAULT_PORT=5672
+RABBITMQ_HOST=brocker
